--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-absl-py>=0.8.0
+gast==0.2.2
 pydub>=0.23.1
-numpy>=1.17.1
-tensorflow==2.0.0rc0
+tensorflow==2.0.0rc2
 python_speech_features>=0.6
 scipy>=1.3.1
